revert to docker run on rc1 version

--- a/build.gradle
+++ b/build.gradle
@@ -15,11 +15,11 @@ import java.util.function.Predicate
 
 buildscript {
     ext {
-        opensearch_version = System.getProperty("opensearch_version", "1.0.0")
+        opensearch_version = System.getProperty("opensearch_version", "1.0.0-rc1")
         distribution = 'oss-zip'
         opensearch_group = "org.opensearch"
         opensearchVersion = '1.0.0'
-        common_utils_version = '1.0.0.0'
+        common_utils_version = '1.0.0.0-rc1'
     }
 
     repositories {
@@ -78,7 +78,7 @@ ext {
 }
 
 group 'org.opensearch'
-version = "${opensearchVersion}.0"
+version = "${opensearchVersion}.0-rc1"
 
 sourceCompatibility = 1.9
 
