fix checkstyle plugin usage

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ buildscript {
 
 plugins {
     id 'nebula.ospackage' version "8.3.0"
+    id 'checkstyle'
 }
 
 repositories {
@@ -54,11 +55,21 @@ apply plugin: 'opensearch.opensearchplugin'
 apply plugin: 'opensearch.testclusters'
 apply plugin: 'opensearch.rest-test'
 
-
-checkstyle {
-    toolVersion = '8.24'
-    configFile file("checkstyle/checkstyle.xml")
+subprojects {
+    apply plugin: 'checkstyle'
+    checkstyle {
+        configFile rootProject.file("config/checkstyle/google_checks.xml")
+        toolVersion "8.29"
+        configProperties = [
+                "org.checkstyle.google.suppressionfilter.config": rootProject.file("config/checkstyle/suppressions.xml")]
+        ignoreFailures = false
+    }
 }
+checkstyle {
+    configFile file("config/checkstyle/checkstyle.xml")
+}
+checkstyleMain.ignoreFailures = false
+checkstyleTest.ignoreFailures = false
 
 def usingRemoteCluster = System.properties.containsKey('tests.rest.cluster') || System.properties.containsKey('tests.cluster')
 def usingMultiNode = project.properties.containsKey('numNodes')
