--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,10 @@ on:
       - plugin-dev
 
 jobs:
-  build:
+  linux-build:
     # Job name
     name: Build Asynchronous Search
-    # This job runs on Linux. TODO Make it work for other OS distributions
+    # This job runs on Linux.
     runs-on: ubuntu-latest
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
@@ -89,5 +89,37 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v1
         with:
-          name: asynchronous-search-plugin
+          name: asynchronous-search-plugin-ubuntu
+          path: asynchronous-search-artifacts
+  windows-build:
+    # Job name
+    name: Build Asynchronous Search
+    # This job runs on Linux.
+    runs-on: windows-latest
+    steps:
+      # This step uses the setup-java Github action: https://github.com/actions/setup-java
+      - name: Set Up JDK 14
+        uses: actions/setup-java@v1
+        with:
+          java-version: 14
+      # This step uses the checkout Github action: https://github.com/actions/checkout
+      - name: Checkout Branch
+        uses: actions/checkout@v2
+      # This is a hack, but this step creates a link to the X: mounted drive, which makes the path short enough to work on Windows
+      - name: Shorten Path
+        run: subst 'X:' .
+        working-directory: 'X:'
+      - name: Build with Gradle
+        run: ./gradlew.bat build -D"opensearch.version=1.3.0-SNAPSHOT" -x integTest -x jacocoTestReport
+        env:
+          _JAVA_OPTIONS: -Xmx4096M
+      - name: Create Artifact Path
+        run: |
+          mkdir -p asynchronous-search-artifacts
+          cp ./build/distributions/*.zip asynchronous-search-artifacts
+      # This step uses the upload-artifact Github action: https://github.com/actions/upload-artifact
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: asynchronous-search-plugin-windows
           path: asynchronous-search-artifacts
