--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,3 +119,31 @@ jobs:
         with:
           name: asynchronous-search-plugin-windows
           path: asynchronous-search-artifacts
+  mac-os-build:
+    # Job name
+    name: Build Asynchronous Search
+    # This job runs on Mac OS.
+    runs-on: macos-latest
+    steps:
+      # This step uses the setup-java Github action: https://github.com/actions/setup-java
+      - name: Set Up JDK 14
+        uses: actions/setup-java@v1
+        with:
+          java-version: 14
+      # This step uses the checkout Github action: https://github.com/actions/checkout
+      - name: Checkout Branch
+        uses: actions/checkout@v2
+      - name: Build with Gradle
+        run: ./gradlew build -Dopensearch.version=1.3.0-SNAPSHOT -x integTest -x jacocoTestReport
+        env:
+          _JAVA_OPTIONS: -Xmx4096M
+      - name: Create Artifact Path
+        run: |
+          mkdir -p asynchronous-search-artifacts
+          cp ./build/distributions/*.zip asynchronous-search-artifacts
+      # This step uses the upload-artifact Github action: https://github.com/actions/upload-artifact
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: asynchronous-search-plugin-mac
+          path: asynchronous-search-artifacts
