--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ buildscript {
         isSnapshot = "true" == System.getProperty("build.snapshot", "true")
         opensearch_version = System.getProperty("opensearch.version", "1.3.0-SNAPSHOT")
         // 1.0.0 -> 1.0.0.0, and 1.0.0-SNAPSHOT -> 1.0.0.0-SNAPSHOT
-        os_as_bwc_version = System.getProperty("bwc.version", "1.0.0.0-SNAPSHOT")
-        opensearch_bwc_version = "${os_as_bwc_version}" - ".0-SNAPSHOT"
+        os_as_bwc_version = System.getProperty("bwc.version", "1.2.1.0")
+        opensearch_bwc_version = "${os_as_bwc_version}"
         opensearch_build = opensearch_version.replaceAll(/(\.\d)([^\d]*)$/, '$1.0$2')
         common_utils_version = System.getProperty("common_utils.version", opensearch_build)
     }
