--- a/build.gradle
+++ b/build.gradle
@@ -330,6 +330,7 @@ task bwcTestSuite(type: StandaloneRestIntegTestTask) {
 }
 
 task copyLatestSnapshot(type: Copy){
+    logger.info('BUILD file ---- '  + "$bwcFilePath$project.version" + "$buildDir/distributions")
     dependsOn 'assemble'
     mkdir "$bwcFilePath$project.version"
     from "$buildDir/distributions"
