--- a/build.gradle
+++ b/build.gradle
@@ -192,7 +192,6 @@ String bwcFilePath = "src/test/resources/org/opensearch/search/asynchronous/bwc/
         "${baseName}$i" {
             testDistribution = "ARCHIVE"
             versions = ["7.10.2",opensearch_version]
-            //versions = [opensearch_bwc_version, opensearch_version] //Opensearch Cluster Versions
             numberOfNodes = 3
             plugin(provider(new Callable<RegularFile>() {
                 @Override
@@ -228,9 +227,20 @@ List<Provider<RegularFile>> plugins = [
         })
 ]
 
+// Ensure the artifact for the current project version is available to be used for the bwc tests
+task prepareBwcTests {
+    dependsOn bundle
+    doLast {
+        plugins = [
+                project.getObjects().fileProperty().value(bundle.getArchiveFile())
+        ]
+    }
+}
+
 // Creates 2 test clusters with 3 nodes of the old version.
 2.times { i ->
     task "${baseName}#oldVersionClusterTask$i"(type: StandaloneRestIntegTestTask) {
+        dependsOn 'prepareBwcTests'
         useCluster testClusters."${baseName}$i"
         filter {
             includeTestsMatching "org.opensearch.search.asynchronous.bwc.*IT"
@@ -321,20 +331,11 @@ task "${baseName}#fullRestartClusterTask"(type: StandaloneRestIntegTestTask) {
 
 // A bwc test suite which runs all the bwc tasks combined.
 task bwcTestSuite(type: StandaloneRestIntegTestTask) {
-    dependsOn "copyLatestSnapshot"
     exclude '**/*Test*'
     exclude '**/*IT*'
     dependsOn tasks.named("${baseName}#mixedClusterTask")
     dependsOn tasks.named("${baseName}#rollingUpgradeClusterTask")
     dependsOn tasks.named("${baseName}#fullRestartClusterTask")
-}
-
-task copyLatestSnapshot(type: Copy){
-    logger.info('BUILD file ---- '  + "$bwcFilePath$project.version" + " " + "$buildDir/distributions")
-    dependsOn 'assemble'
-    from "$buildDir/distributions"
-    include "*.zip"
-    into "$bwcFilePath$project.version"
 }
 
 
