--- a/.github/workflows/multi-node-test-workflow.yml
+++ b/.github/workflows/multi-node-test-workflow.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Run integration tests with multi node config
         run: ./gradlew integTest -PnumNodes=5 -Dopensearch.version=1.3.0-SNAPSHOT
-      - name: Run Alerting Backwards Compatibility Tests
+      - name: Run Backwards Compatibility Tests
         run: |
           echo "Running backwards compatibility tests ..."
           ./gradlew bwcTestSuite -Dtests.security.manager=false
