--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,16 +10,22 @@ on:
 
 jobs:
   linux-build:
+    strategy:
+      matrix:
+        java:
+          - 8
+          - 11
+          - 14
     # Job name
     name: Build Asynchronous Search
     # This job runs on Linux.
     runs-on: ubuntu-latest
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
-      - name: Set Up JDK 14
+      - name: Set Up JDK ${{ matrix.java }}
         uses: actions/setup-java@v1
         with:
-          java-version: 14
+          java-version: ${{ matrix.java }}
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
         uses: actions/checkout@v2
@@ -27,8 +33,8 @@ jobs:
         run: ./gradlew build -Dopensearch.version=1.3.0-SNAPSHOT
       - name: Pull and Run Docker for security tests
         run: |
-          version=1.1.0-SNAPSHOT
-          plugin_version=1.1.0.0-SNAPSHOT
+          version=1.3.0-SNAPSHOT
+          plugin_version=1.3.0.0-SNAPSHOT
           pwd=`pwd`
           echo $pwd
           cd ..
@@ -94,10 +100,10 @@ jobs:
     runs-on: windows-latest
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
-      - name: Set Up JDK 14
+      - name: Set Up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: 14
+          java-version: 11
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
         uses: actions/checkout@v2
@@ -122,10 +128,10 @@ jobs:
     runs-on: macos-latest
     steps:
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
-      - name: Set Up JDK 14
+      - name: Set Up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: 14
+          java-version: 11
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
         uses: actions/checkout@v2
