--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         distribution = 'oss-zip'
         opensearch_group = "org.opensearch"
         isSnapshot = "true" == System.getProperty("build.snapshot", "true")
-        opensearch_version = System.getProperty("opensearch.version", "1.3.0-SNAPSHOT")
+        opensearch_version = System.getProperty("opensearch.version", "2.0.0-SNAPSHOT")
         // 1.0.0 -> 1.0.0.0, and 1.0.0-SNAPSHOT -> 1.0.0.0-SNAPSHOT
         opendistro_plugin_version = System.getProperty("bwc.version", "1.13.0.1")
         opensearch_build = opensearch_version.replaceAll(/(\.\d)([^\d]*)$/, '$1.0$2')
@@ -84,12 +84,12 @@ allprojects {
 }
 
 dependencies {
-    testCompile "org.opensearch.plugin:reindex-client:${opensearch_version}"
-    testCompile "org.opensearch.plugin:lang-painless:${opensearch_version}"
-    testCompile "org.opensearch.test:framework:${opensearch_version}"
+    testImplementation "org.opensearch.plugin:reindex-client:${opensearch_version}"
+    testImplementation "org.opensearch.plugin:lang-painless:${opensearch_version}"
+    testImplementation "org.opensearch.test:framework:${opensearch_version}"
     compileOnly "org.opensearch.plugin:transport-netty4-client:${opensearch_version}"
     compileOnly "org.opensearch:opensearch:${opensearch_version}"
-    compile "org.opensearch:common-utils:${common_utils_version}"
+    implementation "org.opensearch:common-utils:${common_utils_version}"
     configurations.all {
         resolutionStrategy {
             force "com.puppycrawl.tools:checkstyle:${project.checkstyle.toolVersion}"
