--- a/build.gradle
+++ b/build.gradle
@@ -71,8 +71,8 @@ ext {
     noticeFile = rootProject.file('NOTICE.txt')
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 allprojects {
     group 'org.opensearch'
