--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
         opendistro_plugin_version = System.getProperty("bwc.version", "1.13.0.1")
         opensearch_build = opensearch_version.replaceAll(/(\.\d)([^\d]*)$/, '$1.0$2')
         common_utils_version = System.getProperty("common_utils.version", opensearch_build)
+        buildVersionQualifier = System.getProperty("build.version_qualifier")
     }
 
     repositories {
@@ -77,7 +78,10 @@ targetCompatibility = JavaVersion.VERSION_11
 
 allprojects {
     group 'org.opensearch'
-    version = opensearch_version - '-SNAPSHOT' + '.0'
+    version = opensearch_version.tokenize('-')[0] + '.0'
+    if (buildVersionQualifier) {
+        version += "-${buildVersionQualifier}"
+    }
     if (isSnapshot) {
         version += "-SNAPSHOT"
     }
