Add additional version qualifier changes including cu support
Signed-off-by: Peter Zhu <zhujiaxi@amazon.com>

--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,14 @@ buildscript {
         distribution = 'oss-zip'
         opensearch_group = "org.opensearch"
         isSnapshot = "true" == System.getProperty("build.snapshot", "true")
-        opensearch_version = System.getProperty("opensearch.version", "2.0.0-SNAPSHOT")
-        // 1.0.0 -> 1.0.0.0, and 1.0.0-SNAPSHOT -> 1.0.0.0-SNAPSHOT
+        opensearch_version = System.getProperty("opensearch.version", "2.0.0-alpha1-SNAPSHOT")
         opendistro_plugin_version = System.getProperty("bwc.version", "1.13.0.1")
-        opensearch_build = opensearch_version.replaceAll(/(\.\d)([^\d]*)$/, '$1.0$2')
+        // 2.0.0-alpha1-SNAPSHOT -> 2.0.0.0-alpha1-SNAPSHOT
+        version_tokens = opensearch_version.tokenize('-')
+        opensearch_build = version_tokens[0] + '.0'
+        for (int j = 1; j < version_tokens.size(); j++) {
+            opensearch_build = opensearch_build + '-' + version_tokens[j]
+        }
         common_utils_version = System.getProperty("common_utils.version", opensearch_build)
         buildVersionQualifier = System.getProperty("build.version_qualifier")
     }
@@ -78,13 +82,7 @@ targetCompatibility = JavaVersion.VERSION_11
 
 allprojects {
     group 'org.opensearch'
-    version = opensearch_version.tokenize('-')[0] + '.0'
-    if (buildVersionQualifier) {
-        version += "-${buildVersionQualifier}"
-    }
-    if (isSnapshot) {
-        version += "-SNAPSHOT"
-    }
+    version = opensearch_build
 }
 
 dependencies {
