--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,10 +30,10 @@ jobs:
       - name: Checkout Branch
         uses: actions/checkout@v2
       - name: Build with Gradle
-        run: ./gradlew build -Dopensearch.version=2.0.0-SNAPSHOT
+        run: ./gradlew build -Dopensearch.version=2.0.0-alpha1-SNAPSHOT
       - name: Pull and Run Docker for security tests
         run: |
-          version=2.0.0-SNAPSHOT
+          version=2.0.0-alpha1-SNAPSHOT
           plugin_version=2.0.0.0-SNAPSHOT
           pwd=`pwd`
           echo $pwd
@@ -108,7 +108,7 @@ jobs:
       - name: Checkout Branch
         uses: actions/checkout@v2
       - name: Build with Gradle
-        run: ./gradlew.bat build -D"opensearch.version=2.0.0-SNAPSHOT" -x integTest -x jacocoTestReport
+        run: ./gradlew.bat build -D"opensearch.version=2.0.0-alpha1-SNAPSHOT" -x integTest -x jacocoTestReport
         env:
           _JAVA_OPTIONS: -Xmx4096M
       - name: Create Artifact Path
@@ -136,7 +136,7 @@ jobs:
       - name: Checkout Branch
         uses: actions/checkout@v2
       - name: Build with Gradle
-        run: ./gradlew build -Dopensearch.version=2.0.0-SNAPSHOT -x integTest -x jacocoTestReport
+        run: ./gradlew build -Dopensearch.version=2.0.0-alpha1-SNAPSHOT -x integTest -x jacocoTestReport
         env:
           _JAVA_OPTIONS: -Xmx4096M
       - name: Create Artifact Path
