--- a/.github/workflows/multi-node-test-workflow.yml
+++ b/.github/workflows/multi-node-test-workflow.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Checkout Branch
         uses: actions/checkout@v2
       - name: Run integration tests with multi node config
-        run: ./gradlew integTest -PnumNodes=5 -Dopensearch.version=2.0.0-SNAPSHOT
+        run: ./gradlew integTest -PnumNodes=5 -Dopensearch.version=2.0.0-alpha1-SNAPSHOT
       - name: Run Backwards Compatibility Tests
         run: |
           echo "Running backwards compatibility tests ..."
