Remove hardcoding of versions in workflow (#120)
* Remove hardcoding of versions in workflow

Signed-off-by: Peter Zhu <zhujiaxi@amazon.com>

* Make sure docker can pull the right version

Signed-off-by: Peter Zhu <zhujiaxi@amazon.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,11 +30,18 @@ jobs:
       - name: Checkout Branch
         uses: actions/checkout@v2
       - name: Build with Gradle
-        run: ./gradlew build -Dopensearch.version=2.0.0-alpha1-SNAPSHOT
+        run: ./gradlew build
       - name: Pull and Run Docker for security tests
         run: |
-          version=2.0.0-alpha1-SNAPSHOT
-          plugin_version=2.0.0.0-SNAPSHOT
+          version=`./gradlew properties -q | grep "opensearch_version:" | awk '{print $2}'`
+          IFS='-' read -r -a version_array <<< "$version"
+          plugin_version="${version_array[0]}.0"; for entry in ${version_array[@]:1}; do plugin_version+="-$entry"; done
+          docker_version="${version_array[0]}-${version_array[1]}"
+
+          echo version $version
+          echo plugin_version $plugin_version
+          echo docker_version $docker_version
+
           pwd=`pwd`
           echo $pwd
           cd ..
@@ -44,9 +51,9 @@ jobs:
           echo "listing distributions"
           echo $list_of_all_files
 
-          if docker pull opensearchstaging/opensearch:$version
+          if docker pull opensearchstaging/opensearch:$docker_version
           then
-            echo "FROM docker.opensearch.org/opensearch:$version" >> Dockerfile
+            echo "FROM docker.opensearch.org/opensearch:$docker_version" >> Dockerfile
             echo "RUN if [ -d /usr/share/opensearch/plugins/opensearch-asynchronous-search ]; then /usr/share/opensearch/bin/opensearch-plugin remove opensearch-asynchronous-search; fi" >> Dockerfile
             echo "ADD asynchronous-search/build/distributions/opensearch-asynchronous-search-$plugin_version.zip /tmp/" >> Dockerfile
             echo "RUN /usr/share/opensearch/bin/opensearch-plugin install --batch file:/tmp/opensearch-asynchronous-search-$plugin_version.zip" >> Dockerfile
@@ -108,7 +115,7 @@ jobs:
       - name: Checkout Branch
         uses: actions/checkout@v2
       - name: Build with Gradle
-        run: ./gradlew.bat build -D"opensearch.version=2.0.0-alpha1-SNAPSHOT" -x integTest -x jacocoTestReport
+        run: ./gradlew.bat build -x integTest -x jacocoTestReport
         env:
           _JAVA_OPTIONS: -Xmx4096M
       - name: Create Artifact Path
@@ -136,7 +143,7 @@ jobs:
       - name: Checkout Branch
         uses: actions/checkout@v2
       - name: Build with Gradle
-        run: ./gradlew build -Dopensearch.version=2.0.0-alpha1-SNAPSHOT -x integTest -x jacocoTestReport
+        run: ./gradlew build -x integTest -x jacocoTestReport
         env:
           _JAVA_OPTIONS: -Xmx4096M
       - name: Create Artifact Path
